terraform/ec2.tf
resource "aws_instance" "server" {
  ami                         = "ami-01a00762f46d584a1" #ubuntu ami id for ap-south-1
  instance_type               = var.instance_type
  subnet_id                   = aws_subnet.public.id
  vpc_security_group_ids      = [aws_security_group.server.id]
  key_name                    = var.key_name
  associate_public_ip_address = true

  user_data = <<-EOF
              #!/bin/bash
              echo "${file("/home/ubuntu/.ssh/id_ed25519.pub")}" >> /home/ubuntu/.ssh/authorized_keys
              EOF

  root_block_device {
    volume_type = "gp2"
    volume_size = 20
    encrypted   = true
  }

  metadata_options {
    http_endpoint               = "enabled"
    http_tokens                 = "required"
    http_put_response_hop_limit = 2
  }

  tags = {
    Name = "${var.project_name}-devops-server"
  }
}
